<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="-29dp">

        <TextView
            android:id="@+id/tvTitleEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tv_title_edit"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etInputName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_deadline"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvInputDeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:onClick="deadlineDialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaskStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_done"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/swStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="未完了"
                android:textOn="完了" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tv_note"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etInputNote"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="top"
            android:inputType="textMultiLine" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>